evaluation/test_suite/positive/ub42/1.c
#include <stdio.h>
#include <stdint.h>

int main()
{
    int32_t x = INT32_MIN;
    printf("%d\n", x / -1);
}
